syntax = "proto3";

package keycloak;

option go_package = "/proto";

import "google/protobuf/empty.proto";
//import "google/protobuf/any.proto";


message CreateUser {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string user_name = 4;
  string country = 5;
  string mobile_phone =6;
}

message Any {
  string date = 1;
  string value = 2;
}

message GetUser {
  string id = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string user_name = 5;
  string mobile_phone = 6;
  string country = 7;
}

message ListUser{
  repeated User users = 1;
}

service UserService {
  rpc Get(keycloak.GetUser) returns (keycloak.User);
  rpc List(google.protobuf.Empty) returns (keycloak.ListUser);
  rpc Create(keycloak.CreateUser) returns (google.protobuf.Empty);
}
